Closed Bug 363804 Opened 18 years ago Closed 18 years ago

new / delete / free mismatch in mimeobj

Categories

(MailNews Core :: MIME, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ajschult784, Assigned: ajschult784)

References

()

Details

Attachments

(1 file)

obj->options->state is created via |new| (line 201) but freed with PR_Free (line 184).  It should be |delete|d.
Attached patch patchSplinter Review
Attachment #248624 - Flags: superreview?(bienvenu)
Attachment #248624 - Flags: review?(bienvenu)
Comment on attachment 248624 [details] [diff] [review]
patch

thx, Andrew
Attachment #248624 - Flags: superreview?(bienvenu)
Attachment #248624 - Flags: superreview+
Attachment #248624 - Flags: review?(bienvenu)
Attachment #248624 - Flags: review+
FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: