Bug 363804: new / delete / free mismatch in mimeobj.  r+sr=bienvenu